# specs-wms-food-prod

./: .editorconfig  .gitignore  CI_FIX_FINAL_SUMMARY.md  CI_FIX_REPORT.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  INITIAL-10.md  INITIAL-11.md  INITIAL-2.md  INITIAL-3.md  INITIAL-4.md  INITIAL-5.md  INITIAL-6.md  INITIAL-7a.md  INITIAL-7b.md  INITIAL-8a.md  INITIAL-8b.md  INITIAL-9a.md  INITIAL-9b.md  INITIAL-EXAMPLE.md  INITIAL.md  LICENSE  README.md  WORKFLOW_FIX_SUMMARY.md  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  perf_test.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260124_add_flow_definitions.py  20260124_phase81_01_add_lot_step_index_status.py  20260124_phase81_02_enhance_flow_version_status.py  20260124_phase81_03_enhance_production_runs.py  20260124_phase81_04_add_run_step_executions.py  20260124_phase81_05_add_flow_version_immutability_trigger.py  20260124_phase83_01_add_buffers_inventory.py  20260124_phase83_02_add_buffer_purity_trigger.py  20260124_phase84_01_add_qc_inspections_temp_audit.py  20260124_phase84_02_add_audit_triggers.py
backend/app/: __init__.py  cache.py  config.py  database.py  main.py  metrics.py  rate_limit.py
backend/app/api/: deps.py  (+1 more)
backend/docker/: Dockerfile  docker-compose.yml  test-observability.sh
backend/scripts/: backup-weekly.sh  backup.sh  gpg-setup.sh  restore.sh  test-restore.sh  verify-backup.sh
backend/tests/: __init__.py  conftest.py  test_inventory.py  test_metrics.py  test_qc_inspection.py  test_rate_limiting.py  test_rbac.py  test_runs.py
(+282 files in other folders)
